--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ button {
     color: white;
     background-color: black;
     border-color: red;
-    font-size: larger;
+    font-size: 150%;
     font-family: Arial;
     opacity: 0%;
 }
@@ -53,5 +53,5 @@ button {
     left: 0;
     bottom: 0;
     right: 0;
-    top: 0;
+    top: 50px;
 }
